email confirmation register and field validation
