# src/routes/authRoute.js
@@ -1,12 +1,15 @@
 import { Router } from "express";
 import {
   signupController,
-  signinController
+  signinController,
+  signUpValidationController,
 } from "../controllers/authController";
-import { signinAuth } from "../middlewares/authMiddleware";
+import { signinAuth, verifyToken } from "../middlewares/authMiddleware";
+
 
 const authRouter = Router();
 authRouter.post("/signup", signupController);
+authRouter.get("/validate", verifyToken, signUpValidationController);
 authRouter.post("/signin", signinAuth, signinController);
 
 export default authRouter;
