# src/routes/userRoute.js
@@ -1,9 +1,8 @@
 import { Router } from "express";
-import { jwtProtect } from "../middlewares/jwtAuthMiddleware";
 import { getAllUsers } from "../controllers/userController";
 
 const router = Router();
 
-router.get("/", jwtProtect, getAllUsers);
+router.get("/", getAllUsers);
 
 export default router;
